--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=nome_do_banco
-DB_USERNAME=usuario_do_banco
-DB_PASSWORD=senha_do_banco
+DB_DATABASE=CRMZAPEX
+DB_USERNAME=root
+DB_PASSWORD=Megadriver@5533
