--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "server": "php -S localhost: -t public"
     },
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "robmorgan/phinx": "^0.16.5"
     },
     "config": {
         "process-timeout": 0
