--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "2091/controle-stoque",
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Core\\": "core/"
+            "App\\": "app/"
         }
     },
 
